@@ -1,4 +1,4 @@
-Django>=1.8
+Django>=1.11
 coverage
 pytest
 pytest-cov
