@@ -1,25 +1,10 @@
 from __future__ import unicode_literals
 
-from django import VERSION
 from django.conf import settings
 from django.utils import six
 from django.utils.encoding import force_text
 from django.utils.functional import wraps
 from django.utils.module_loading import import_string
-
-
-def _remote_field(field):
-    if VERSION < (1, 9):
-        return field.rel
-    else:
-        return field.remote_field
-
-
-def _related_model(remote_field):
-    if VERSION >= (1, 9):
-        return remote_field.model
-    else:
-        return remote_field.to
 
 
 def _parse_tags(tagstring):
